fixed horizontal scrolling overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,8 @@
         margin-inline: 9.5rem;
     }
 }
+
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
